--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/Jmark0123/frontend#readme",
   "devDependencies": {
     "electron": "^24.3.1"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "toastify-js": "^1.12.0"
   }
 }
